# hallways

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: check.yml  release.yml
asset/release/: deb.control.template
asset/shader/: level.wgsl  overlay.wgsl
release/: icon.rs  main.rs  win.rs
release/linux/: app.rs  build.rs  deb.rs  icon.rs  mod.rs
src/: app.rs  color.rs  config.rs  level.rs  main.rs  player.rs  window.rs
src/app/: gpu.rs  handler.rs  key_event.rs  mouse_motion.rs  render.rs  resize.rs  update.rs
src/audio/: cross_fader.rs  data.rs  mod.rs  silent.rs  track.rs
src/color/: test.rs
src/config/: control.rs
src/gltf/: mesh.rs  mod.rs  test.rs  vertex.rs
src/graphics/: mod.rs  model.rs  sprite.rs
src/graphics/frame/: level.rs
src/graphics/pipeline/: mod.rs
src/graphics/pipeline/common/: mod.rs
src/graphics/sprite/: border.rs  solid.rs  text.rs  texture_kind.rs
src/graphics/storage/: material_index.rs  mod.rs
src/graphics/texture/: array.rs  depth.rs  mod.rs  sampler.rs
src/graphics/uniform/: camera.rs  mod.rs
src/level/: cache.rs  error.rs  load.rs  manifest.rs  material.rs  portal.rs  render.rs
src/level/manifest/: fetch.rs  test.rs
src/level/portal/: geometry.rs  link.rs  test.rs
src/overlay/: banner.rs  intro.rs  log.rs  mod.rs
src/overlay/menu/: home.rs  mod.rs  settings.rs  visit.rs
src/parry3d/: cylinder.rs  mod.rs  trimesh.rs
src/player/: integrate.rs  movement_state.rs  posture.rs  rotation.rs  sweep.rs  teleport.rs  test.rs  wish.rs
src/window/: handler.rs  state.rs  window.rs
(+36 files in other folders)
